--- a/weatherProject/src/App.css
+++ b/weatherProject/src/App.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Nanum Gothic", serif;
+  font-family: "Nanum Gothic";
   font-weight: 100;
   color: #fff;
 }
@@ -42,7 +42,7 @@
 .body {
   margin: 0 auto;
   width: 99vw;
-  height: 100%;
+  height: 100vh;
   display: block;
   background-image: url(./assets/img/light.jpg);
   background-position: center;
@@ -51,8 +51,8 @@
 }
 .body .container {
   margin: 0 auto;
-  height: 900px;
   width: 90vw;
+  height: 100vh;
   padding-top: 20px;
   box-sizing: border-box;
 }
@@ -102,7 +102,7 @@
 }
 .body .container .main .firstSection .selectTime {
   width: 100%;
-  height: 15%;
+  height: 21%;
   margin: 0 auto;
   border-radius: 10px;
   background: none;
@@ -111,22 +111,23 @@
           backdrop-filter: blur(30px);
   opacity: 90%;
   box-sizing: border-box;
-  padding: 1vw !important;
 }
 .body .container .main .firstSection .selectTime .selectValuebox {
   width: 10vw;
+  height: 100%;
   margin: auto;
   text-align: center;
+  flex-direction: column;
 }
 .body .container .main .firstSection .selectTime .sb {
   display: flex;
-  justify-content: space-between;
-  gap: 0.5vw;
-  margin-bottom: 1vw;
+  justify-content: space-around;
+  flex-direction: column;
+  height: 50%;
 }
 .body .container .main .firstSection .selectTime .selectValue,
 .body .container .main .firstSection .selectTime .mapSelect {
-  width: 5vw;
+  width: 10vw;
   height: 1.5vw;
   border-radius: 20px;
   font-size: 0.7vw;
@@ -150,7 +151,7 @@
 }
 .body .container .main .realtimeWeatherArea {
   width: 100%;
-  height: 20.5vw;
+  height: 18vw;
   margin: 0 auto;
   border-radius: 20px;
   background: linear-gradient(#ccc8bd, #0185f8);
@@ -180,10 +181,9 @@
   margin-top: 2vh;
 }
 .body .container .main .realtimeWeatherArea .realtimeWeather ul .icon {
-  width: 8vw;
-  height: 40%;
+  width: 6vw;
+  height: 32%;
   margin: -1vw auto;
-  background-image: url(./assets/img/sunny.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -198,7 +198,7 @@
 .body .container .main .realtimeWeatherArea .realtimeWeather ul .weatherType {
   text-align: center;
   width: 10vw;
-  font-size: 1.5vw;
+  font-size: 1.2vw;
 }
 .body .container .main .realtimeWeatherArea .realtimeWeather ul .weather-info {
   margin-top: 1vw;
@@ -328,7 +328,7 @@
 }
 .body .container .secondSection .b1 .map .koreaMap.active {
   fill: #0088ff;
-  stroke: #ffa600;
+  stroke: #0088ff;
   stroke-width: 3;
 }
 .body .container .secondSection .b1 .map .koreaMap:hover {
@@ -416,6 +416,19 @@
   -webkit-backdrop-filter: blur(30px);
           backdrop-filter: blur(30px);
   opacity: 90%;
+}
+.body .container .thirdSection .c .c2-1 span,
+.body .container .thirdSection .c .c2-2 span,
+.body .container .thirdSection .c .c2-3 span {
+  display: inline-block;
+  width: 50%;
+  text-align: right;
+}
+.body .container .thirdSection .c .c2-1 .textLeft,
+.body .container .thirdSection .c .c2-2 .textLeft,
+.body .container .thirdSection .c .c2-3 .textLeft {
+  width: 30%;
+  padding-right: 20%;
 }
 .body .container .thirdSection .c .c2-1 .allhighestprecipitation,
 .body .container .thirdSection .c .c2-2 .allhighestprecipitation,
@@ -571,7 +584,6 @@
   opacity: 90%;
   padding: 10px 0 10px 0;
   font-size: 0.8vw;
-  text-align: center;
   box-sizing: border-box;
   font-weight: bold;
   background-color: rgb(109, 145, 181);
@@ -601,11 +613,13 @@
   border-bottom: 1px solid #bdc5cc;
   color: #ffffff;
 }
-.body .container .thirdSection .c2 .table .tableMain .customtbody .customtr {
+.body .container .thirdSection .customtbody .customtr {
   border-bottom: 2px solid #0185f8;
   color: #ffffff;
 }
-.body .container .thirdSection .c2 .table .tableMain .customtbody .customtr .customtd {
+.body .container .thirdSection .customtbody .customtr .customtd {
+  text-align: right;
+  padding-right: 10px;
   width: 20vw;
   word-break: break-all;
   border-bottom: 1px solid #dedede;
@@ -615,7 +629,7 @@
 .body.dark {
   margin: 0 auto;
   width: 99vw;
-  height: 100%;
+  height: 100vh;
   display: block;
   background-image: url(./assets/img/dark3.png);
   background-position: center;
@@ -624,7 +638,7 @@
 }
 .body.dark .container {
   margin: 0 auto;
-  height: 900px;
+  height: 100vh;
   width: 90vw;
   padding-top: 20px;
   box-sizing: border-box;
@@ -670,28 +684,32 @@
 }
 .body.dark .container .main .firstSection .selectTime {
   width: 100%;
-  height: 15%;
+  height: 21%;
   margin: 0 auto;
-  border-radius: 20px;
-  background-color: #303136;
   border-radius: 10px;
-  box-shadow: 5px 5px 10px #131212;
+  background: none;
+  box-shadow: 5px 5px 10px #68747c;
+  -webkit-backdrop-filter: blur(30px);
+          backdrop-filter: blur(30px);
+  opacity: 90%;
   box-sizing: border-box;
 }
 .body.dark .container .main .firstSection .selectTime .selectValuebox {
   width: 10vw;
+  height: 100%;
   margin: auto;
   text-align: center;
+  flex-direction: column;
 }
 .body.dark .container .main .firstSection .selectTime .sb {
   display: flex;
-  justify-content: space-between;
-  gap: 0.5vw;
-  margin-bottom: 1vw;
+  justify-content: space-around;
+  flex-direction: column;
+  height: 50%;
 }
 .body.dark .container .main .firstSection .selectTime .selectValue,
 .body.dark .container .main .firstSection .selectTime .mapSelect {
-  width: 5vw;
+  width: 10vw;
   height: 1.5vw;
   border-radius: 20px;
   font-size: 0.7vw;
@@ -715,7 +733,7 @@
 }
 .body.dark .container .main .realtimeWeatherArea {
   width: 100%;
-  height: 20.5vw;
+  height: 18vw;
   margin: 0 auto;
   background-color: #fff;
   border-radius: 20px;
@@ -725,7 +743,7 @@
 }
 .body.dark .container .main .realtimeWeatherArea .realtimeWeather {
   height: 100%;
-  font-size: 1.3vw;
+  font-size: 1.1vw;
 }
 .body.dark .container .main .realtimeWeatherArea .realtimeWeather h2 {
   font-family: "Nanum Gothic", serif;
@@ -745,10 +763,9 @@
   margin-top: 2vh;
 }
 .body.dark .container .main .realtimeWeatherArea .realtimeWeather ul .icon {
-  width: 8vw;
-  height: 40%;
+  width: 6vw;
+  height: 32%;
   margin: -1vw auto;
-  background-image: url(./assets/img/sunny.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -766,7 +783,7 @@
 .body.dark .container .main .realtimeWeatherArea .realtimeWeather ul .weatherType {
   text-align: center;
   width: 10vw;
-  font-size: 1.5vw;
+  font-size: 1.2vw;
 }
 .body.dark .container .main .realtimeWeatherArea .realtimeWeather ul .weather-info {
   margin-top: 1vw;
@@ -819,7 +836,7 @@
 }
 .body.dark .container .main .perceived .thermometerIconbox div p {
   margin-top: 1vw;
-  font-size: 1.1vw;
+  font-size: 1vw;
   font-weight: bold;
   font-family: "Nanum Gothic", serif;
   font-weight: 600;
@@ -865,11 +882,16 @@
   position: absolute;
 }
 .body.dark .container .secondSection .b1 .map .koreaMap {
-  stroke: #e0dfdf;
+  stroke: #780aa7;
   fill: #ffffff;
 }
+.body.dark .container .secondSection .b1 .map .koreaMap.active {
+  fill: #ffa600;
+  stroke: #ffa600;
+  stroke-width: 3;
+}
 .body.dark .container .secondSection .b1 .map .koreaMap:hover {
-  fill: #06ab7c;
+  fill: #ffa600;
   cursor: pointer;
 }
 .body.dark .container .secondSection .b2 {
@@ -945,6 +967,19 @@
   background-color: #303136;
   border-radius: 10px;
   box-shadow: 5px 5px 10px #131212;
+}
+.body.dark .container .thirdSection .c .c2-1 span,
+.body.dark .container .thirdSection .c .c2-2 span,
+.body.dark .container .thirdSection .c .c2-3 span {
+  display: inline-block;
+  width: 50%;
+  text-align: right;
+}
+.body.dark .container .thirdSection .c .c2-1 .textLeft,
+.body.dark .container .thirdSection .c .c2-2 .textLeft,
+.body.dark .container .thirdSection .c .c2-3 .textLeft {
+  width: 30%;
+  padding-right: 20%;
 }
 .body.dark .container .thirdSection .c .c2-1 .allhighestprecipitation,
 .body.dark .container .thirdSection .c .c2-2 .allhighestprecipitation,
@@ -1079,7 +1114,6 @@
   background-color: #303136;
   border-radius: 10px;
   box-shadow: 5px 5px 10px #131212;
-  text-align: center;
   box-sizing: border-box;
   font-weight: bold;
 }
